--- a/docker-images/appach-php-image/static-data/index.html
+++ b/docker-images/appach-php-image/static-data/index.html
@@ -33,8 +33,8 @@
             <div class="container px-lg-5">
                 <div class="p-4 p-lg-5 bg-light rounded-3 text-center">
                     <div class="m-4 m-lg-5">
-                        <h1 class="display-5 fw-bold">A cold welcome!</h1>
-                        <p class="fs-4">This a dumb static HTTP page, but it looks nice !</p>
+                        <h1 class="display-5 fw-bold">Labo DAI</h1>
+                        <p id="api-animals"></p>
                         <a class="btn btn-primary btn-lg" href="#!">Call to action</a>
                     </div>
                 </div>
@@ -110,5 +110,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <!-- Custom script to load animals-->
+        <script src="js/animals.js"></script>
     </body>
 </html>
